# homebrew-tips

./: CMakeLists.txt  CmakeList.txt  LICENSE  README.md  thefranco2-tips.rb
Formula/: main.c  tips.c  tips.rb
pages/: cat.txt  cd.txt  clear.txt  cp.txt  ls.txt  man.txt  mkdir.txt  mv.txt  pwd.txt  rm.txt  rmdir.txt  touch.txt
